자재, 제품정보 화면구성

--- a/erp_mes/src/main/resources/templates/inventory/outbound_list.html
+++ b/erp_mes/src/main/resources/templates/inventory/outbound_list.html
@@ -122,10 +122,10 @@
                                 <td>145</td>
                                 <td>포장용기 금형</td>
                                 <td>1</td>
-                                <td><span class="badge badge-primary">완제품</span></td>
+                                <td><span class="badge badge-light text-primary" style="font-size: 14px;">완제품</span></td>
                                 <td>완제품 창고3</td>
                                 <td>-</td>
-                                <td><span class="badge badge-warning">출고대기</span></td>
+                                <td><span class="badge badge-light text-warning" style="font-size: 14px;">출고대기</span></td>
                                 <td>
                                     <button class="btn btn-sm btn-danger" onclick="cancelOutbound('145')">
                                         출고취소
@@ -137,10 +137,10 @@
                                 <td>144</td>
                                 <td>전자제품 하우징 금형</td>
                                 <td>1</td>
-                                <td><span class="badge badge-primary">완제품</span></td>
+                                <td><span class="badge badge-light text-primary" style="font-size: 14px;">완제품</span></td>
                                 <td>완제품 창고3</td>
                                 <td>-</td>
-                                <td><span class="badge badge-warning">출고대기</span></td>
+                                <td><span class="badge badge-light text-warning" style="font-size: 14px;">출고대기</span></td>
                                 <td>
                                     <button class="btn btn-sm btn-danger" onclick="cancelOutbound('144')">
                                         출고취소
@@ -152,10 +152,10 @@
                                 <td>142</td>
                                 <td>스프링</td>
                                 <td>10</td>
-                                <td><span class="badge badge-info">원자재</span></td>
+                                <td><span class="badge badge-light text-info" style="font-size: 14px;">원자재</span></td>
                                 <td>원자재 창고1</td>
                                 <td>2025-09-09</td>
-                                <td><span class="badge badge-success">출고완료</span></td>
+                                <td><span class="badge badge-light text-success" style="font-size: 14px;">출고완료</span></td>
                                 <td>
                                     <button class="btn btn-sm btn-primary" onclick="downloadDeliveryPDF('142')">
                                         인쇄(pdf)
@@ -170,10 +170,10 @@
                                 <td>141</td>
                                 <td>SUS304 스테인리스강</td>
                                 <td>100</td>
-                                <td><span class="badge badge-info">원자재</span></td>
+                                <td><span class="badge badge-light text-info" style="font-size: 14px;">원자재</span></td>
                                 <td>원자재 창고1</td>
                                 <td>2025-09-09</td>
-                                <td><span class="badge badge-success">출고완료</span></td>
+                                <td><span class="badge badge-light text-success" style="font-size: 14px;">출고완료</span></td>
                                 <td>
                                     <button class="btn btn-sm btn-primary" onclick="downloadDeliveryPDF('141')">
                                         인쇄(pdf)
