--- a/erp_mes/src/main/resources/templates/pm/product_plan_list.html
+++ b/erp_mes/src/main/resources/templates/pm/product_plan_list.html
@@ -11,19 +11,40 @@
 </head>
 <body>
 	<th:block layout:fragment="content">
-	    <div class="container-fluid">
+<!-- 	    <div class="container-fluid"> -->
 	
-	        <!-- Page Heading -->
-	        <h1 class="h3 mb-2 text-gray-900">근태관리 출퇴근현황</h1>
-					    <button type="submit" id="searchBtn" class="btn btn-secondary btn-sm me-3" style="min-width:80px; margin-right:80px;">조회</button>
-					    <button id="checkInBtn" class="btn btn-success btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button>
-					    <button id="checkOutBtn" class="btn btn-success btn-sm" style="min-width: 80px; margin-right:190px;">퇴근</button>
-	        <div class="card shadow mb-4">
-		        <h4>제품</h4>
-		   		<div id="grid"></div>
-	        </div>
+<!-- 	        Page Heading -->
+<!-- 	        <h1 class="h3 mb-2 text-gray-900">제품</h1> -->
+<!-- 	        <div class="card shadow mb-4"> -->
+<!-- 					    <button type="submit" id="searchBtn" class="btn btn-secondary btn-sm me-3" style="min-width:80px; margin-right:80px;">조회</button> -->
+<!-- 					    <button id="checkInBtn" class="btn btn-success btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button> -->
+<!-- 					    <button id="checkOutBtn" class="btn btn-success btn-sm" style="min-width: 80px; margin-right:190px;">퇴근</button> -->
+<!-- 		        <h4>제품</h4> -->
+<!-- 		   		<div id="grid"></div> -->
+<!-- 	        </div> -->
 	
-	    </div>
+<!-- 	    </div> -->
+
+		<div class="container-fluid">
+<!--     <h1 class="h3 mb-2 text-gray-900">제품 & BOM</h1> -->
+    <div class="row">
+        <!-- 왼쪽: 제품 Grid -->
+        <div class="col-md-6">
+            <div class="card shadow mb-4">
+                <h3>제품</h3>
+                <div id="prod-grid"></div>
+            </div>
+        </div>
+
+        <!-- 오른쪽: BOM Grid -->
+        <div class="col-md-6">
+            <div class="card shadow mb-4">
+                <h3>BOM</h3>
+                <div id="bom-grid"></div>
+            </div>
+        </div>
+    </div>
+</div>
 	    <!-- /.container-fluid -->
 	
 	</th:block>
