--- a/erp_mes/src/main/resources/templates/business/client.html
+++ b/erp_mes/src/main/resources/templates/business/client.html
@@ -3,17 +3,20 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
-    <!-- 개별페이지 CSS 영역 -->
     <th:block layout:fragment="style">
         <!-- Bootstrap CSS 링크 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- 커스텀 CSS 파일 링크 -->
         <link rel="stylesheet" th:href="@{/business/css/client.css}" />
+        <!-- Toast UI Grid CSS -->
+        <link rel="stylesheet" href="https://uicdn.toast.com/grid/latest/tui-grid.css" />
     </th:block>
+    
+    <meta name="_csrf" content="${_csrf.token}"/>
+	<meta name="_csrf_header" content="${_csrf.headerName}"/>
 </head>
 <body>
 <th:block layout:fragment="content">
-    <!-- Begin Page Content -->
     <div class="container-fluid">
         <div class="container-fluid">
             <section class="section">
@@ -31,7 +34,7 @@
                                 		<select id="cliStatus" class="form-select" aria-label="전체">
                                    			<option value="ALL">전체</option>
                                     		<option value="PURCHASE">매입사</option>
-                                    		<option value="ODRER">매출사</option>
+                                    		<option value="ORDER">매출사</option>
                                     		<option value="INSPECT">검사 업체</option>
                                 		</select>
                                 	</div>
@@ -41,6 +44,7 @@
 									</div>
 								</div>
                             	<div class="search-buttons">
+                            		<button id="searchBtn" class="btn btn-light">검색</button>
                                 	<button id="addBtn" class="btn btn-light">등록</button>
                             	</div>
                             </div>
@@ -48,25 +52,8 @@
                         	<hr>
                             <label for="cliSearch" class="cliSearch">거래처 목록</label>
                             
-                            <table class="table table-hover mt-3">
-                                <thead class="table-light">
-                                    <tr>
-                                        <th scope="col">거래처 번호</th>
-                                        <th scope="col">거래처명</th>
-                                        <th scope="col">거래처 유형</th>
-                                        <th scope="col">사업자 번호</th>
-                                        <th scope="col">대표자명</th>
-                                        <th scope="col">주소</th>
-                                        <th scope="col">전화번호</th>
-                                        <th scope="col">거래 여부</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="transferTableBody">
-                                    <tr>
-                                        <td colspan="8" class="text-center py-4">데이터가 없습니다.</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div id="clientGrid">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -74,13 +61,76 @@
         </div>
     </div>
 
+	<div class="modal fade" id="clientAddModal" tabindex="-1" aria-labelledby="clientAddModalLabel" aria-hidden="true">
+    	<div class="modal-dialog modal-dialog-centered">
+        	<div class="modal-content">
+            	<div class="modal-header">
+                	<h5 class="modal-title" id="clientAddModalLabel">거래처 등록</h5>
+                	<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            	</div>
+            	<div class="modal-body">
+                	<form id="clientAddForm">
+                    	<div class="mb-3">
+                        	<label for="clientName" class="form-label">거래처명 *</label>
+                        	<input type="text" class="form-control" id="clientName" required>
+                    	</div>
+                    	<div class="mb-3">
+                        	<label for="ceoName" class="form-label">대표자명 *</label>
+                        	<input type="text" class="form-control" id="ceoName" required>
+                    	</div>
+                    	<div class="mb-3">
+                        	<label for="businessNumber" class="form-label">사업자 등록번호 *</label>
+                        	<div class="input-group">
+                            	<input type="text" class="form-control" id="businessNumber" required>
+                        	</div>
+                    	</div>
+                    	<div class="mb-3">
+                        	<label for="clientType" class="form-label">거래처 유형 *</label>
+                        	<select id="clientType" class="form-select" required>
+                            	<option value="">선택</option>
+                            	<option value="PURCHASE">매입사</option>
+                            	<option value="ORDER">매출사</option>
+                            	<option value="INSPECT">검사 업체</option>
+                        	</select>
+                    	</div>
+                    	<div class="mb-3">
+                        	<label for="clientStatus" class="form-label">거래 여부 *</label>
+                       		<select id="clientStatus" class="form-select" required>
+                            	<option value="">선택</option>
+                            	<option value="ACTIVE">거래중</option>
+                            	<option value="INACTIVE">거래중지</option>
+                        	</select>
+                    	</div>
+                    	<div class="mb-3">
+                        	<label for="clientPhone" class="form-label">거래처 연락처 *</label>
+                        	<input type="text" class="form-control" id="clientPhone" required>
+                    	</div>
+
+                    	<div class="mb-3">
+                        	<label for="clientAddress" class="form-label">주소 *</label>
+                        	<div class="input-group">
+                            	<input type="text" class="form-control mt-2" id="clientAddress" placeholder="주소" required>
+                            	<button type="button" class="btn btn-primary" id="searchAddress">주소 찾기</button>
+                        	</div>
+                    	</div>
+                    	<div class="modal-footer d-flex justify-content-end">
+                        	<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                        	<button type="submit" class="btn btn-success">등록</button>
+                    	</div>
+                    	<input type="hidden" id="csrfToken" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                	</form>
+            	</div>
+        	</div>
+    	</div>
+	</div>
 </th:block>
 
 <th:block layout:fragment="script">
-    <!-- Bootstrap JS Bundle (Popper.js 포함) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+	<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
     <script th:src="@{/business/js/client.js}"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </th:block>
+
 </body>
 </html>
