--- a/erp_mes/src/main/resources/templates/inventory/material_list.html
+++ b/erp_mes/src/main/resources/templates/inventory/material_list.html
@@ -11,7 +11,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
-        <h1 class="h3 mb-4 text-gray-800">자재 관리</h1>
+        <h1 class="h3 mb-4 text-gray-800">자재(부품) 관리</h1>
         
         <!-- 검색 영역 -->
         <div class="card shadow mb-4">
