--- a/erp_mes/src/main/resources/templates/pm/product_plan_list.html
+++ b/erp_mes/src/main/resources/templates/pm/product_plan_list.html
@@ -11,46 +11,91 @@
 </head>
 <body>
 	<th:block layout:fragment="content">
-<!-- 	    <div class="container-fluid"> -->
-	
-<!-- 	        Page Heading -->
-<!-- 	        <h1 class="h3 mb-2 text-gray-900">제품</h1> -->
-<!-- 	        <div class="card shadow mb-4"> -->
-<!-- 					    <button type="submit" id="searchBtn" class="btn btn-secondary btn-sm me-3" style="min-width:80px; margin-right:80px;">조회</button> -->
-<!-- 					    <button id="checkInBtn" class="btn btn-success btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button> -->
-<!-- 					    <button id="checkOutBtn" class="btn btn-success btn-sm" style="min-width: 80px; margin-right:190px;">퇴근</button> -->
-<!-- 		        <h4>제품</h4> -->
-<!-- 		   		<div id="grid"></div> -->
-<!-- 	        </div> -->
-	
-<!-- 	    </div> -->
 
 		<div class="container-fluid">
-<!--     <h1 class="h3 mb-2 text-gray-900">제품 & BOM</h1> -->
-    <div class="row">
-        <!-- 왼쪽: 제품 Grid -->
-        <div class="col-md-6">
-            <div class="card shadow mb-4">
-                <h3>제품</h3>
-                <div id="prod-grid"></div>
-            </div>
-        </div>
-
-        <!-- 오른쪽: BOM Grid -->
-        <div class="col-md-6">
-            <div class="card shadow mb-4">
-                <h3>BOM</h3>
-                <div id="bom-grid"></div>
-            </div>
-        </div>
-    </div>
-</div>
-	    <!-- /.container-fluid -->
+		    <div class="row">
+		        <!-- 왼쪽: 제품 Grid -->
+		        <div class="col-md-6">
+		            <div class="card shadow mb-4">
+		            	<div class="d-flex align-items-center justify-content-between mb-2">
+			                <h3 class="mb-0">제품</h3>
+			                <button class="btn btn-success btn-sm me-3" id="openProductModalBtn">등록</button>
+		                </div>
+		                <div id="prod-grid"></div>
+		            </div>
+		        </div>
+		
+		        <!-- 오른쪽: BOM Grid -->
+		        <div class="col-md-6">
+		            <div class="card shadow mb-4">
+		                <h3>BOM</h3>
+		                <div id="bom-grid"></div>
+		            </div>
+		        </div>
+		    </div>
+		</div>
+	
+		<form id="productForm">
+		<div class="modal fade" id="productRegisterModal" tabindex="-1" aria-labelledby="productRegisterLabel" aria-hidden="true">
+		    <div class="modal-dialog modal-dialog-scrollable modal-lg">
+		        <div class="modal-content" id="modalContentContainer">
+		            
+		            <!-- 모달 헤더 -->
+		            <div class="modal-header" style="border-bottom: 1px solid black;">
+		                <h5 class="modal-title" id="productRegisterLabel">제품 등록</h5>
+		            </div>
+		
+		            <!-- 모달 바디 -->
+		            <div class="modal-body" style="height: 230px;">
+		                <div class="row mb-4">
+		                    <div class="col">
+		                        <label for="product_id" class="form-label">제품코드</label>
+		                        <input type="text" id="product_id" name="productId" class="form-control" placeholder="제품코드">
+		                    </div>
+		                    <div class="col">
+		                        <label for="product_name" class="form-label">제품명</label>
+		                        <input type="text" id="product_name" name="productName" class="form-control" placeholder="제품명">
+		                    </div>
+		                </div>
+		
+						<div class="row mb-4">
+						    <div class="col">
+						        <label for="product_type" class="form-label">제품 구분</label>
+								<select id="product_type" name="productType" class="form-control">
+								  <option value="">선택하세요</option>
+								  <option th:each="c : ${commonPtype}"
+								          th:value="${c.comDtId}"
+								          th:text="${c.comDtNm}"></option>
+								</select>
+						    </div>
+						    <div class="col">
+						        <label for="unit" class="form-label">단위</label>
+								<select id="unit" name="unit" class="form-control">
+								  <option value="">선택하세요</option>
+								  <option th:each="c : ${commonUnit}"
+								          th:value="${c.comDtId}"
+								          th:text="${c.comDtNm}"></option>
+								</select>
+						    </div>
+						</div>
+		            </div>
+		
+		            <!-- 모달 푸터 -->
+		            <div class="modal-footer">
+		                <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+		                <button type="button" class="btn btn-primary" id="productRegisterBtn">등록</button>
+		            </div>
+		        </div>
+		    </div>
+		</div>
+		</form>
+	
 	
 	</th:block>
 	<th:block layout:fragment="script">
 		<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
-		<script src="/bootstrap/js/pm/pm.js"></script>
+		<script src="/bootstrap/js/pm/produdct_list.js"></script>
+		<script src="/bootstrap/js/pm/product_modal.js"></script>
 	</th:block>
 </body>
 </html>
