공정 설비 설비 이력 관련 파일 생성 및 조인

--- a/erp_mes/src/main/resources/templates/hrn/personnelRegist.html
+++ b/erp_mes/src/main/resources/templates/hrn/personnelRegist.html
@@ -168,7 +168,7 @@
 						
 							<br> <br>
 							<div align="right">
-								<button type="button" class="btn btn-secondary btn-icon-split" onclick="history.back()">취소</button>
+								<button type="button" class="btn btn-primary btn-sm" onclick="history.back()">취소</button>
 								<button type="submit" class="btn btn-primary btn-sm" id="registerBtn">등록</button>
 							</div>
 						</form>
