--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -158,7 +158,7 @@
 						<h6 class="collapse-header">기준정보관리:</h6>
 						<a class="collapse-item" th:href="@{/business/client}">거래처 관리</a>
 						<a class="collapse-item" th:href="@{/masterData/productBomInfo}">제품/bom정보</a>
-						<a class="collapse-item" th:href="@{/quality}">품질정보</a>
+						<a class="collapse-item" th:href="@{/quality/qcinfo}">품질정보</a>
 						<a class="collapse-item" th:href="@{/plant/equipment}">설비관리</a>
 						<a class="collapse-item" th:href="@{/plant/process}">공정관리</a>
 						<a class="collapse-item" th:href="@{/inventory/material}">자재(부품) 정보</a>
